--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
 # Nome do nosso pipeline de automação
 name: CI Pipeline
 
-# Define quando o pipeline deve rodar:
-# a cada 'push' (envio de código) ou 'pull_request' para a branch 'main'
+# Define quando o pipeline deve rodar
 on:
   push:
     branches: [ main ]
@@ -11,7 +10,6 @@ on:
 
 # Define os "trabalhos" (jobs) que o pipeline vai executar
 jobs:
-  # Nosso único job se chama 'build'
   build:
     # Ele vai rodar em uma máquina virtual com a versão mais recente do Ubuntu
     runs-on: ubuntu-latest
@@ -22,20 +20,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Configura o ambiente Python na versão 3.11
-      - name: Set up Python 3.11
+      # 2. Configura o ambiente Python (AGORA CORRIGIDO PARA 3.13)
+      - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.13" # <-- MUDANÇA 1
 
       # 3. Instala todas as dependências listadas no requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      # 4. Roda os testes com o pytest!
-      # Se este passo falhar, o pipeline inteiro falha.
+      
+      # 4. Roda os testes com o pytest
       - name: Run tests
         run: |
-          pytest
+          python -m pytest # <-- MUDANÇA 2
